--- a/css/portifolio.css
+++ b/css/portifolio.css
@@ -1,12 +1,46 @@
-.item-portifolio {
-    margin: 10px 0;
+main {
+    margin-top: 100px;
 }
 
-.item-portifolio img {
+.projeto {
+    display: flex;
+    flex-direction: row;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
+    background: #202020;
+    margin: 20px 0;
+    height: 280px;
+}
+
+.descricao {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;  
+    color: white;
+    box-sizing: border-box;
+}
+
+.capa {
+    width: 500px;
+    height: 280px;
+    background: #75A6D2;
+    text-align: center;
+}
+
+.capa img {
+    height: 280px;
     max-width: 100%;
+    box-sizing: border-box;
+    padding: 5px;
 }
 
-.item-portifolio a {
-    color: #538EC5;
-    font-weight: 500;
+.resumo {
+    height: 200px;
+    font-size: 16px;
+    box-sizing: border-box;
+}
+
+.tecnologias i {
+    font-size: 44px;
+    margin-right: 10px;
 }
